<resources>
    <string name="app_name">Employee</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="emailPattern">^[a-zA-Z]+[._a-zA-Z0-9]*@[a-z]+([\.][a-z]+)+$</string>
    <string name="passwordPattern">^[A-Z][a-zA-Z0-9@#$%^;+=]{7,}$</string>
    <string name="temperaryName">temperaryName</string>
</resources>
