<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/takePicture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/_12sdp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_photo_camera_red_24dp"
            tools:ignore="VectorDrawableCompat" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkRed"
            android:textSize="@dimen/_13sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_18sdp"
            android:text="@string/take_picture"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/uploadPicture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/_12sdp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_insert_photo_red_24dp"
            tools:ignore="VectorDrawableCompat" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkRed"
            android:textSize="@dimen/_13sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_18sdp"
            android:text="@string/upload_picture"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/removePicture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/_12sdp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_delete_red_24dp"
            tools:ignore="VectorDrawableCompat" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkRed"
            android:textSize="@dimen/_13sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_18sdp"
            android:text="@string/remove_picture"/>
    </LinearLayout>
</LinearLayout>